...
        app:layout_constraintBottom_toTopOf="@+id/sun"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hicri" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/fajrTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/fajr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/fajr"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/sun"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
...
