...

        </FrameLayout>
    </com.metinkale.prayer.times.utils.MultipleOrientationSlidingDrawer>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
...
