...
    <string name="adjAngle">Angle based (angle/60th of night)</string>
    <string name="adjMidnight">Midnight</string>
    <string name="adjThird">Times based (1/3th of night)</string>
    <string name="adjFifth">Times based (1/5th of night)</string>
    <string name="adjTime">Time based (1/7th of night)</string>
    <string name="calcMethod">Method</string>
    <string name="cities">Cities</string>
    <string name="customVolume">Choose Volume</string>
    <string name="date">Date</string>
    <string name="delCityConfirm">Do you really want to delete the city "%1$s"?</string>
    <string name="delAlarmConfirm">Do you really want to delete the alarm "%1$s"?</string>
    <string name="dlSound">Download “%1$s” (%2$s)?</string>
    <string name="highlatsAdj">High Latitudes Adjustment:</string>
...
